--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "dependencies": {
     "chalk": "^5.0.1",
-    "prompt": "^1.2.2"
+    "prompt": "^1.2.2",
+    "table": "^6.8.0"
   }
 }
